@@ -11,14 +11,19 @@ MD5 a85c9870f88c721b06c03d7cf6605133 files/smokeping.init 1632
 RMD160 c041fb04e1d63dfd077ecd7abd0248eb7dc63c1c files/smokeping.init 1632
 SHA256 625634db58c5eca142d6bf13741e5afbb18ecdbbd780cbfeafe13711a94dc929 files/smokeping.init 1632
 DIST smokeping-2.0.9.tar.gz 393777 RMD160 3ddbe35f6ec634773d6facc5d7e4c17c17753984 SHA1 89427122eada5fdf5f6145705f080583fb2d245a SHA256 c9fc10d04afae31ac5283101f0211e842faf98784301178833ada1e3e4a0dcf5
+DIST smokeping-2.2.3.tar.gz 697271 RMD160 e5ae9bf9bbad9002ce639906562bd0db338665d1 SHA1 18df7c831ea05a6bda48d0f65c4c6957b5e162b3 SHA256 4121655a2fcb5779b66f221c86cf898c6ea35ad557b67dc8e9ebc8e09a3ffb99
 EBUILD smokeping-2.0.9.ebuild 3362 RMD160 61c81f7eafa15c2468b07e44fa3c3f5a410a9f8e SHA1 de051f3fef3791e29a9a72168f78644b3959e26b SHA256 68770bd5f4f3e78fd159b8b46ad772559fc388518504608ba1b9281f1d8eafee
 MD5 2c4944d422e4e9e29b3b671d6455dabd smokeping-2.0.9.ebuild 3362
 RMD160 61c81f7eafa15c2468b07e44fa3c3f5a410a9f8e smokeping-2.0.9.ebuild 3362
 SHA256 68770bd5f4f3e78fd159b8b46ad772559fc388518504608ba1b9281f1d8eafee smokeping-2.0.9.ebuild 3362
-MISC ChangeLog 1688 RMD160 fa6259937c60a4f8aea199cf032d19ac6aad0bf7 SHA1 85e2f1f8e6e79ab03e1b8bfbe76fb8d22e020cc1 SHA256 6f4e737853ae4a961d474ec6b88c68daa29ffd75a78533d10d6e480b20128454
-MD5 1d93e23ffa296b42a5883eb016b93161 ChangeLog 1688
-RMD160 fa6259937c60a4f8aea199cf032d19ac6aad0bf7 ChangeLog 1688
-SHA256 6f4e737853ae4a961d474ec6b88c68daa29ffd75a78533d10d6e480b20128454 ChangeLog 1688
+EBUILD smokeping-2.2.3.ebuild 3458 RMD160 4ac1132033cff97139a506a792f655e3c5feb048 SHA1 38aee6077b02afcfded3e6fcba8fb006e3b40d83 SHA256 30064a455e1697fbe5e1b9063136128e62cc1dc3dacf6d207d7149fbf26b944e
+MD5 8fe11eab35f951f1fba295297be1fba4 smokeping-2.2.3.ebuild 3458
+RMD160 4ac1132033cff97139a506a792f655e3c5feb048 smokeping-2.2.3.ebuild 3458
+SHA256 30064a455e1697fbe5e1b9063136128e62cc1dc3dacf6d207d7149fbf26b944e smokeping-2.2.3.ebuild 3458
+MISC ChangeLog 1818 RMD160 6aa5d90690a85d6dcdb2b37d981e35482289b4ad SHA1 0faa5319d27621755d04f40cb00d30c6e7ee86e0 SHA256 ed8146916668f20bca2481bd42521b2ba02c8bb765bdb7887849255f08447cd6
+MD5 7bf8291e2485e80b84557cc475012eb6 ChangeLog 1818
+RMD160 6aa5d90690a85d6dcdb2b37d981e35482289b4ad ChangeLog 1818
+SHA256 ed8146916668f20bca2481bd42521b2ba02c8bb765bdb7887849255f08447cd6 ChangeLog 1818
 MISC metadata.xml 251 RMD160 b51dbdd722927410f6ddea140ac6eebb8980b94e SHA1 2294d43232148e83653e27ee326c4c84389e4123 SHA256 4ba83a5bcb7a3c1cb108e970efc076f21e52493f59d52d271867588fe330d16b
 MD5 34a8120f0854b70fb459e6d2c486370f metadata.xml 251
 RMD160 b51dbdd722927410f6ddea140ac6eebb8980b94e metadata.xml 251
@@ -26,3 +31,6 @@ SHA256 4ba83a5bcb7a3c1cb108e970efc076f21e52493f59d52d271867588fe330d16b metadata
 MD5 81d1df4235dfdb4f6c31e7c7e7612a1f files/digest-smokeping-2.0.9 247
 RMD160 5970b92757c24b8c4067b5684e1c6ba10d8915e7 files/digest-smokeping-2.0.9 247
 SHA256 1cf4755243694a82121a0a5b8f46731cabfd1bfc61b951aa3e5dd3ef44fa51ae files/digest-smokeping-2.0.9 247
+MD5 943f2541123a339aa07f3a096d638c9c files/digest-smokeping-2.2.3 247
+RMD160 ba2bf849402aad233bf5289a8a491dd9982253dc files/digest-smokeping-2.2.3 247
+SHA256 2bedf394ac67ddd9ee3e997b160b6723e62efd723544b12d2237c38d78c9f8c5 files/digest-smokeping-2.2.3 247
