@@ -1,0 +1,3 @@
+MD5 3cfa6b4e5574bc19a5e7c990878adead smokeping-2.2.3.tar.gz 697271
+RMD160 e5ae9bf9bbad9002ce639906562bd0db338665d1 smokeping-2.2.3.tar.gz 697271
+SHA256 4121655a2fcb5779b66f221c86cf898c6ea35ad557b67dc8e9ebc8e09a3ffb99 smokeping-2.2.3.tar.gz 697271
