@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/smokeping
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.13 2007/09/13 20:08:55 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.14 2007/09/13 21:40:01 hansmi Exp $
+
+*smokeping-2.2.3 (13 Sep 2007)
+
+  13 Sep 2007; Michael Hanselmann <hansmi@gentoo.org>
+  +smokeping-2.2.3.ebuild:
+  Version bump.
 
   13 Sep 2007; Michael Hanselmann <hansmi@gentoo.org>
   smokeping-2.0.9.ebuild:
